--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <h1>Personal information</h1>
+  <input id="name" name="name" type="text"/>
+  <input id="email" name="email" type="email"/>
+  <input id="password" name="password" type="password"/>
   <script src="./index.js"></script>
 </body>
 </html>
