Labels for the form fields

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
   <h1>Personal information</h1>
+  <label for="name">Name</label>
   <input id="name" name="name" type="text"/>
+  <label for="email">Email</label>
   <input id="email" name="email" type="email"/>
+  <label for="password">Password</label>
   <input id="password" name="password" type="password"/>
   <script src="./index.js"></script>
 </body>
