Submit button and placeholder for errors

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <input id="email" name="email" type="email"/>
   <label for="password">Password</label>
   <input id="password" name="password" type="password"/>
+  <button type="submit" id="submit">Submit</button>
+  <div id="errors"></div>
   <script src="./index.js"></script>
 </body>
 </html>
