--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <h1>Personal information</h1>
   <label for="name">Name</label>
   <input id="name" name="name" type="text"/>
+  <div id="name-errors"></div>
   <label for="email">Email</label>
   <input id="email" name="email" type="email"/>
+  <div id="email-errors"></div>
   <label for="password">Password</label>
   <input id="password" name="password" type="password"/>
+  <div id="password-errors"></div>
   <button type="submit" id="submit">Submit</button>
-  <div id="errors"></div>
   <script src="./index.js"></script>
 </body>
 </html>
