Validation errors from the start

--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <h1>Personal information</h1>
-  <label for="name">Name</label>
-  <input id="name" name="name" type="text"/>
-  <div id="name-errors"></div>
-  <label for="email">Email</label>
-  <input id="email" name="email" type="email"/>
-  <div id="email-errors"></div>
-  <label for="password">Password</label>
-  <input id="password" name="password" type="password"/>
-  <div id="password-errors"></div>
-  <button type="submit" id="submit">Submit</button>
+  <form id="form">
+    <label for="name">Name</label>
+    <input id="name" name="name" type="text" />
+    <div id="name-errors"></div>
+    <label for="email">Email</label>
+    <input id="email" name="email" type="email" />
+    <div id="email-errors"></div>
+    <label for="password">Password</label>
+    <input id="password" name="password" type="password" />
+    <div id="password-errors"></div>
+    <button type="submit" id="submit">Submit</button>
+  </form>
   <script src="./index.js"></script>
 </body>
+
 </html>
